Fediverse Tools for Joomla, version 1.0.2
================================================================================
+ Greek translation

Fediverse Tools for Joomla, version 1.0.1
================================================================================
~ Installation throws an error due to a typo in the post-installation script

Fediverse Tools for Joomla, version 1.0.0
================================================================================
+ Initial version