@@ -2,4 +2,4 @@
  * @package   FediverseForJoomla
  * @copyright Copyright (c)2022 Nicholas K. Dionysopoulos
  * @license   GNU General Public License, version 3
- */:root{--mod-fediversefeed-color-separator: darkgray;--mod-fediversefeed-color-muted: darkgrey;--mod-fediversefeed-color-cw-bg: darkred;--mod-fediversefeed-color-cw-fg: white;--mod-fediversefeed-color-caption-bg: darkslategrey;--mod-fediversefeed-color-caption-fg: white;--mod-fediversefeed-color-caption-border: darkgrey;--mod-fediversefeed-color-reblog: darkslategrey;--mod-fediversefeed-color-reblog-border: rgba(0,0,0,0.1);--mod-fediversefeed-color-blockquote-before: dimgrey;--mod-fediversefeed-color-blockquote-border: darkgray;--mod-fediversefeed-color-poll-info: dimgrey}@media screen and (prefers-color-scheme: dark){:root{--mod-fediversefeed-color-reblog: darkgrey;--mod-fediversefeed-color-reblog-border: rgba(255,255,255,0.3);--mod-fediversefeed-color-blockquote-before: lightgray;--mod-fediversefeed-color-poll-info: lightgray}}.fediverse-toot-media-item picture{inline-size:100%}.fediverse-toot-media-item video{inline-size:100%}.fediverse-toot-media-item figcaption{background-color:var(--mod-fediversefeed-color-caption-bg, darkslategrey);color:var(--mod-fediversefeed-color-caption-fg, white);border-block-start:thin solid var(--mod-fediversefeed-color-caption-border, darkgrey);padding:.25em .5em}.fediverse-feed{text-align:start}.fediverse-feed.fediverse-feed-rtl{direction:rtl}.fediverse-feed .fediverse-content-emoji{max-inline-size:1.5rem;max-block-size:1rem}.fediverse-feed .fediverse-feed-header{margin-block-end:.75em;border-block-end:2px solid var(--mod-fediversefeed-color-separator, darkgray)}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container{display:flex;flex-direction:row;gap:.5em;align-items:center;justify-content:space-evenly}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container .fediverse-feed-header-top-avatar-wrapper{flex-shrink:1}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container .fediverse-feed-header-top-avatar-wrapper .fediverse-feed-header-top-avatar{inline-size:100%;max-inline-size:2em;block-size:auto;border-radius:50%}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container .fediverse-feed-header-top-title{flex-grow:1}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-description,.fediverse-feed .fediverse-feed-header .fediverse-feed-header-date{font-size:smaller;color:var(--mod-fediversefeed-color-muted, darkgrey)}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-date{text-align:center}.fediverse-feed ul.fediverse-toots{list-style:none;margin:0;padding:0}.fediverse-feed ul.fediverse-toots li.fediverse-toot{margin-block-end:.75em;padding:0 0 .5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot+li{padding:.75em 0 0;border-block-start:thin solid var(--mod-fediversefeed-color-separator, darkgray)}.fediverse-feed ul.fediverse-toots li.fediverse-toot.fediverse-toot-rtl{direction:rtl}.fediverse-feed ul.fediverse-toots li.fediverse-toot.fediverse-toot-ltr{direction:ltr}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-reblog-info{padding-block:.25em;padding-inline:.5em;margin-block-end:.25em;color:var(--mod-fediversefeed-color-reblog, darkslategrey);border-bottom:thin solid var(--mod-fediversefeed-color-reblog-border, rgba(0, 0, 0, 0.1))}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-reblog-info a:any-link{color:var(--mod-fediversefeed-color-reblog, darkslategrey);text-decoration:none}.fediverse-feed ul.fediverse-toots li.fediverse-toot blockquote{display:flex;flex-direction:row;align-items:start;gap:.5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot blockquote::before{flex-shrink:1;color:var(--mod-fediversefeed-color-blockquote-before, dimgrey);border-inline-end:.1em solid var(--mod-fediversefeed-color-blockquote-border, darkgray);padding-inline-end:.25em;content:"“";font-family:serif;font-size:2em;font-weight:bold}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-poll{font-size:smaller;display:flex;flex-direction:column;gap:.25em;margin-block-end:.5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-poll .fediverse-toot-poll-option .fediverse-toot-poll-option-title .fediverse-toot-poll-option-percent{display:inline-block;inline-size:3em;font-weight:bold}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-poll .fediverse-toot-poll-info{padding-block-start:.25em;color:var(--mod-fediversefeed-color-poll-info, dimgrey)}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media{display:grid;grid-gap:.25em;grid-template-columns:repeat(auto-fit, minmax(8em, 1fr));margin-block-end:.5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>:first-child{grid-column:1/-1}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>.fediverse-toot-media-item{margin-block:0;margin-inline:auto;cursor:pointer;max-inline-size:100%;box-sizing:border-box;overflow:hidden}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>.fediverse-toot-media-item>.fediverse-toot-media-sensitive{filter:blur(1.5em)}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>.fediverse-toot-media-item figcaption{display:none}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-toot-permalink{text-align:start}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-toot-permalink.fediverse-toot-permalink-ltr{direction:ltr}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-toot-permalink.fediverse-toot-permalink-rtl{direction:rtl}.fediverse-cw-badge{background-color:var(--mod-fediversefeed-color-cw-bg, darkred);color:var(--mod-fediversefeed-color-cw-fg, white);font-weight:bold;padding-block:.25em;padding-inline:.5em;border-radius:.25em;font-size:smaller;display:inline-block}.fediverse-visually-hidden{position:absolute !important;width:1px !important;height:1px !important;padding:0 !important;margin:-1px !important;overflow:hidden !important;clip:rect(0, 0, 0, 0) !important;white-space:nowrap !important;border:0 !important}/*# sourceMappingURL=custom.css.map */
+ */:root{--mod-fediversefeed-color-separator: darkgray;--mod-fediversefeed-color-muted: darkgrey;--mod-fediversefeed-color-cw-bg: darkred;--mod-fediversefeed-color-cw-fg: white;--mod-fediversefeed-color-caption-bg: darkslategrey;--mod-fediversefeed-color-caption-fg: white;--mod-fediversefeed-color-caption-border: darkgrey;--mod-fediversefeed-color-reblog: darkslategrey;--mod-fediversefeed-color-reblog-border: rgba(0,0,0,0.1);--mod-fediversefeed-color-blockquote-before: dimgrey;--mod-fediversefeed-color-blockquote-border: darkgray;--mod-fediversefeed-color-poll-info: dimgrey;--mod-fediversefeed-color-blockquote-reblog-border: lightblue;--mod-fediversefeed-color-blockquote-reblog-background: linear-gradient(90deg, transparent, rgba(0,0,0,0.01))}@media screen and (prefers-color-scheme: dark){:root{--mod-fediversefeed-color-reblog: darkgrey;--mod-fediversefeed-color-reblog-border: rgba(255,255,255,0.3);--mod-fediversefeed-color-blockquote-before: lightgray;--mod-fediversefeed-color-poll-info: lightgray;--mod-fediversefeed-color-blockquote-reblog-border: lightblue;--mod-fediversefeed-color-blockquote-reblog-background: linear-gradient(90deg, transparent, rgba(255,255,255,0.05))}}.fediverse-toot-media-item picture{inline-size:100%}.fediverse-toot-media-item video{inline-size:100%}.fediverse-toot-media-item figcaption{background-color:var(--mod-fediversefeed-color-caption-bg, darkslategrey);color:var(--mod-fediversefeed-color-caption-fg, white);border-block-start:thin solid var(--mod-fediversefeed-color-caption-border, darkgrey);padding:.25em .5em}.fediverse-feed{text-align:start}.fediverse-feed.fediverse-feed-rtl{direction:rtl}.fediverse-feed .fediverse-content-emoji{max-inline-size:1.5rem;max-block-size:1rem}.fediverse-feed .fediverse-feed-header{margin-block-end:.75em;border-block-end:2px solid var(--mod-fediversefeed-color-separator, darkgray)}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container{display:flex;flex-direction:row;gap:.5em;align-items:center;justify-content:space-evenly}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container .fediverse-feed-header-top-avatar-wrapper{flex-shrink:1}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container .fediverse-feed-header-top-avatar-wrapper .fediverse-feed-header-top-avatar{inline-size:100%;max-inline-size:2em;block-size:auto;border-radius:50%}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-top .fediverse-feed-header-top-container .fediverse-feed-header-top-title{flex-grow:1}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-description,.fediverse-feed .fediverse-feed-header .fediverse-feed-header-date{font-size:smaller;color:var(--mod-fediversefeed-color-muted, darkgrey)}.fediverse-feed .fediverse-feed-header .fediverse-feed-header-date{text-align:center}.fediverse-feed ul.fediverse-toots{list-style:none;margin:0;padding:0}.fediverse-feed ul.fediverse-toots li.fediverse-toot{margin-block-end:.75em;padding:0 0 .5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot+li{padding:.75em 0 0;border-block-start:thin solid var(--mod-fediversefeed-color-separator, darkgray)}.fediverse-feed ul.fediverse-toots li.fediverse-toot.fediverse-toot-rtl{direction:rtl}.fediverse-feed ul.fediverse-toots li.fediverse-toot.fediverse-toot-ltr{direction:ltr}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-reblog-info{padding-block:.25em;padding-inline:.5em;margin-block-end:.25em;color:var(--mod-fediversefeed-color-reblog, darkslategrey);border-bottom:thin solid var(--mod-fediversefeed-color-reblog-border, rgba(0, 0, 0, 0.1))}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-reblog-info a:any-link{color:var(--mod-fediversefeed-color-reblog, darkslategrey);text-decoration:none}.fediverse-feed ul.fediverse-toots li.fediverse-toot blockquote{margin-inline-start:1.75rem;padding-inline-start:.25rem;border-inline-start:.25rem solid var(--mod-fediversefeed-color-blockquote-border, darkgray)}.fediverse-feed ul.fediverse-toots li.fediverse-toot blockquote::before{content:"“";display:block;float:left;position:absolute;margin-inline-start:-2rem;z-index:10;font-family:serif;font-size:2.5em;font-weight:bold;color:var(--mod-fediversefeed-color-blockquote-before, dimgrey)}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-reblog-content blockquote{margin-inline-start:.25rem;padding-inline:.25rem;border-inline-start:.25rem solid var(--mod-fediversefeed-color-blockquote-reblog-border, lightblue);background:var(--mod-fediversefeed-color-blockquote-reblog-background, linear-gradient(90deg, transparent, rgba(0, 0, 0, 0.01)))}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-reblog-content blockquote:before{display:none}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-poll{font-size:smaller;display:flex;flex-direction:column;gap:.25em;margin-block-end:.5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-poll .fediverse-toot-poll-option .fediverse-toot-poll-option-title .fediverse-toot-poll-option-percent{display:inline-block;inline-size:3em;font-weight:bold}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-poll .fediverse-toot-poll-info{padding-block-start:.25em;color:var(--mod-fediversefeed-color-poll-info, dimgrey)}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media{display:grid;grid-gap:.25em;grid-template-columns:repeat(auto-fit, minmax(8em, 1fr));margin-block-end:.5em}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>:first-child{grid-column:1/-1}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>.fediverse-toot-media-item{margin-block:0;margin-inline:auto;cursor:pointer;max-inline-size:100%;box-sizing:border-box;overflow:hidden}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>.fediverse-toot-media-item>.fediverse-toot-media-sensitive{filter:blur(1.5em)}.fediverse-feed ul.fediverse-toots li.fediverse-toot div.fediverse-toot-media>.fediverse-toot-media-item figcaption{display:none}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-toot-permalink{text-align:start}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-toot-permalink.fediverse-toot-permalink-ltr{direction:ltr}.fediverse-feed ul.fediverse-toots li.fediverse-toot .fediverse-toot-permalink.fediverse-toot-permalink-rtl{direction:rtl}.fediverse-cw-badge{background-color:var(--mod-fediversefeed-color-cw-bg, darkred);color:var(--mod-fediversefeed-color-cw-fg, white);font-weight:bold;padding-block:.25em;padding-inline:.5em;border-radius:.25em;font-size:smaller;display:inline-block}.fediverse-visually-hidden{position:absolute !important;width:1px !important;height:1px !important;padding:0 !important;margin:-1px !important;overflow:hidden !important;clip:rect(0, 0, 0, 0) !important;white-space:nowrap !important;border:0 !important}/*# sourceMappingURL=custom.css.map */
