@@ -1,6 +1,7 @@
 Fediverse Tools for Joomla, version 1.0.2
 ================================================================================
 + Greek translation
+~ Improved layout for reblogged (boosted) toots
 
 Fediverse Tools for Joomla, version 1.0.1
 ================================================================================
